package co.edu.uniquindio.Proyecto_Avanzada.domain;

public enum NivelPrioridad {
    ALTA,
    MEDIA,
    BAJA
}
