package co.edu.uniquindio.Proyecto_Avanzada.domain;

public enum TipoAccion {
    CREACION,
    ASIGNACION,
    CAMBIO_ESTADO,
    CIERRE
}
