@startuml
title Sistema de Triage y Gestión de Solicitudes Académicas

' =========================
' ENUMS (Value Objects)
' =========================

enum EstadoSolicitud {
  REGISTRADA
  CLASIFICADA
  EN_ATENCION
  ATENDIDA
  CERRADA
}

enum TipoAccion {
    CREACION
    ASIGNACION
    CAMBIO_ESTADO
    CIERRE
}

enum NivelPrioridad {
  ALTA
  MEDIA
  BAJA
}

enum Rol {
  ESTUDIANTE
  ADMINISTRATIVO
  COORDINADOR
  ASEADOR
}

enum TipoSolicitud {
    REGISTRO_ASIGNATURA
    HOMOLOGACION
    CANCELACION_ASIGNATURA
    SOLICITUD_CUPOS
    CONSULTA_ACADEMICA
}

' =========================
' ENTIDADES
' =========================

class Usuario {
  +id: Long
  +nombre: String
  +identificacion: String
  +correo: String
  +activo: Boolean
}

class Solicitud {
  +id: Long
  +descripcion: String
  +fechaHoraRegistro: LocalDateTime
  +justificacionPrioridad: String
  +fechaCierre: LocalDateTime
}

class Prioridad {
  +id: Long
  +descripcion: String
}

class CanalOrigen {
  +id: Long
  +nombre: String
}

class HistorialSolicitud {
  +id: Long
  +responsable: Usuario
  +fechaHora: LocalDateTime
  +observacion: String
}

' =========================
' RELACIONES
' =========================

Usuario "1" -- "N" Solicitud : crea >
Prioridad "1" -- "N" Solicitud : define <
CanalOrigen "1" -- "N" Solicitud : registra <
Solicitud "1" -- "N" HistorialSolicitud : tiene >
HistorialSolicitud "1" -- "1" Usuario : responsable >

' =========================
' RELACIONES CON ENUMS (Value Objects)
' =========================

Solicitud ..> EstadoSolicitud : estado
Solicitud ..> TipoSolicitud : tipo
Solicitud ..> Prioridad : prioridad
HistorialSolicitud ..> EstadoSolicitud : estado
HistorialSolicitud ..> TipoAccion : accion
Usuario ..> Rol : rol
Prioridad ..> NivelPrioridad

@enduml